# adaptive-anderson

./: .gitignore  MANIFEST.in  Makefile  Makefile.inc  README.md  adaptive_anderson_solver.f90  adaptive_anderson_solver.h  adaptive_anderson_solver.pyx  licence  pyproject.toml  requirements.txt  setup.py
example/: Makefile  example.f90
example/fortran/: Makefile  example.f90
example/python/: example.py
src/adaptive_anderson_solver/: adaptive_anderson_solver.h  adaptive_anderson_solver.pyx
src/fortran/: adaptive_anderson_solver.f90
test/: .gitignore  input.in  test.f90  test.py
