[build-system]
requires = ["setuptools ~= 58.0", "cython ~= 0.29.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive_anderson_solver"
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "adaptive_anderson_solver.version"}
readme = {file = ["README.md"]}
